# SnowSignal

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  docker-compose.dev.yml  docker-compose.local-dev.yml  docker-compose.swarm.yml  docker-compose.yml  pyproject.toml  test.py
.github/workflows/: publish-to-test-pypi.yml
.gitlab/: .gitlab-ci.yml
docs/: local_dev.md  socat_test_broadcast.md  swarm_setup.md
snowsignal/: __main__.py  configure.py  dockerfile  netutils.py  packet.py  requirements.txt  snowsignal.py  udp_relay_receive.py  udp_relay_transmit.py  udtest.py
src/: configure.py  dockerfile  netutils.py  packet.py  requirements.txt  snowsignal.py  udp_relay_receive.py  udp_relay_transmit.py
test/: requirements.txt  test_netutils.py  test_packet.py  test_snowsignal.py  test_udp_relay_receive.py  test_udp_relay_transmit.py
tests/unit/: dockerfile  test_netutils.py  test_packet.py  test_snowsignal.py  test_udp_relay_receive.py  test_udp_relay_transmit.py
