[project]
name = "SnowSignal"
version = "0.0.1"
dependencies = [
    "configargparse>=1.7",
    "psutil>=5.9",
]
requires-python = ">=3.8"
authors = [
  {name = "Ivan Finch", email = "ivan.finch@stfc.ac.uk"},
]
maintainers = [
  {name = "Ivan Finch", email = "ivan.finch@stfc.ac.uk"},
]
description = "UDP Broadcast Relay"
readme = "README.md"
#license = {file = "LICENSE.txt"}
keywords = ["UDP", "docker swarm", "epics", "pvaccess",]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python",
  "Topic :: System :: Networking",
  "Typing :: Typed"
]

[project.urls]
Repository = "https://gitlab.stfc.ac.uk/isis-accelerator-controls/playground/ivan/infrastructure/snowsignal"

[project.optional-dependencies]
test = [
  "scapy~=2.0",
  "black>=24.4",
  "flake8>=7.1",
  "Flake8-pyproject>=1.2",
  "coverage>=7.6"
]
build = [
  "build>=1.2"
]
distribute = [
  "twine>=5.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flake8]
extend-ignore = ["E203", "E501", "W503"]
max-line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["snowsignal/"]

[tool.black]
line-length = 120
check=true
color = true
diff = true

[tool.coverage.run]
source = ["."]
omit = ["./tests/locust/"]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"